change customer wording to contact
