# docs/swagger.yaml
@@ -1,8 +1,8 @@
 swagger: '2.0'
 info:
-  description: 'Simple API to manage customers'
+  description: 'Simple API to manage contacts'
   version: '1.0.0'
-  title: 'Customers API'
+  title: 'Contacts API'
 host: 'localhost:5000'
 basePath: '/'
 consumes:
@@ -10,14 +10,14 @@ consumes:
 produces:
   - 'application/json'
 tags:
-  - name: 'customer'
-    description: 'operations on customers'
+  - name: 'contact'
+    description: 'operations on contacts'
 paths:
-  /customers:
+  /contacts:
     get:
       tags:
-        - 'customer'
-      summary: 'Get a list of customers'
+        - 'contact'
+      summary: 'Get a list of contacts'
       description: ''
       responses:
         '200':
@@ -25,11 +25,11 @@ paths:
           schema:
             type: 'array'
             items:
-              $ref: '#/definitions/CustomerSimplified'
+              $ref: '#/definitions/ContactSimplified'
     post:
       tags:
-        - 'customer'
-      summary: 'Add a new customer'
+        - 'contact'
+      summary: 'Add a new contact'
       description: ''
       parameters:
         - name: 'apiKey'
@@ -38,12 +38,12 @@ paths:
           required: true
           type: 'string'
         - in: 'body'
-          name: 'customer'
-          description: 'Customer object that needs to be added in DB'
+          name: 'contact'
+          description: 'Contact object that needs to be added in DB'
           required: true
           schema:
             allOf:
-              - $ref: '#/definitions/CustomerEditableAttributes'
+              - $ref: '#/definitions/ContactEditableAttributes'
               - type: 'object'
                 required:
                   - 'email'
@@ -52,10 +52,10 @@ paths:
           description: 'Created'
           schema:
             type: 'object'
-            $ref: '#/definitions/Customer'
+            $ref: '#/definitions/Contact'
 
         '400':
-          description: 'Invalid input. The customer object provided is not valid'
+          description: 'Invalid input. The contact object provided is not valid'
           schema:
             type: 'object'
             properties:
@@ -64,16 +64,16 @@ paths:
         '401':
           description: 'Unauthorized'
 
-  /customers/{customerId}:
+  /contacts/{contactId}:
     get:
       tags:
-        - 'customer'
-      summary: 'Find a customer by ID'
-      description: 'Returns a single customer'
+        - 'contact'
+      summary: 'Find a contact by ID'
+      description: 'Returns a single contact'
       parameters:
-        - name: 'customerId'
+        - name: 'contactId'
           in: 'path'
-          description: 'ID of customer to return'
+          description: 'ID of contact to return'
           required: true
           type: 'integer'
           format: 'int64'
@@ -82,14 +82,14 @@ paths:
           description: 'successful operation'
           schema:
             type: 'object'
-            $ref: '#/definitions/Customer'
+            $ref: '#/definitions/Contact'
 
         '404':
-          description: 'customer not found'
+          description: 'contact not found'
     put:
       tags:
-        - 'customer'
-      summary: 'Update an existing customer'
+        - 'contact'
+      summary: 'Update an existing contact'
       description: ''
       parameters:
         - name: 'apiKey'
@@ -97,28 +97,28 @@ paths:
           description: 'The key needed to access some parts of the API'
           required: true
           type: 'string'
-        - name: 'customerId'
+        - name: 'contactId'
           in: 'path'
-          description: 'ID of customer to return'
+          description: 'ID of contact to return'
           required: true
           type: 'integer'
           format: 'int64'
         - in: 'body'
-          name: 'customer'
-          description: 'customer object that needs to be updated'
+          name: 'contact'
+          description: 'contact object that needs to be updated'
           required: true
           schema:
-            $ref: '#/definitions/CustomerEditableAttributes'
+            $ref: '#/definitions/ContactEditableAttributes'
       responses:
         '200':
           description: 'Updated'
           schema:
             type: 'object'
-            $ref: '#/definitions/Customer'
+            $ref: '#/definitions/Contact'
         '404':
-          description: 'customer not found'
+          description: 'contact not found'
         '400':
-          description: 'Invalid input. The customer object provided is not valid'
+          description: 'Invalid input. The contact object provided is not valid'
           schema:
             type: 'object'
             properties:
@@ -128,8 +128,8 @@ paths:
           description: 'Unauthorized'
     delete:
       tags:
-        - 'customer'
-      summary: 'Deletes a customer'
+        - 'contact'
+      summary: 'Deletes a contact'
       description: ''
       parameters:
         - name: 'apiKey'
@@ -137,21 +137,21 @@ paths:
           description: 'The key needed to access some parts of the API'
           required: true
           type: 'string'
-        - name: 'customerId'
+        - name: 'contactId'
           in: 'path'
-          description: 'customer id to delete'
+          description: 'contact id to delete'
           required: true
           type: 'integer'
           format: 'int64'
       responses:
         '404':
-          description: 'customer not found'
+          description: 'contact not found'
         '200':
           description: 'OK'
         '401':
           description: 'Unauthorized'
 definitions:
-  CustomerEditableAttributes:
+  ContactEditableAttributes:
     type: 'object'
     properties:
       first_name:
@@ -164,7 +164,7 @@ definitions:
         type: 'string'
         example: 'john.doe@gmail.com'
 
-  CustomerSimplified:
+  ContactSimplified:
     type: 'object'
     properties:
       id:
@@ -177,11 +177,11 @@ definitions:
         type: 'string'
         example: 'john.doe@gmail.com'
 
-  Customer:
+  Contact:
     allOf:
       - type: 'object'
         properties:
           id:
             type: 'integer'
             format: 'int64'
-      - $ref: '#/definitions/CustomerEditableAttributes'
+      - $ref: '#/definitions/ContactEditableAttributes'
